--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,14 @@ mybatis.configuration.mapUnderscoreToCamelCase=true
 #logger
 #logging.level.com.nowcoder.community=debug
 #logging.file.name=D:/IDEA_project/community/log/community.log
-#
+
+#MailProperties
+spring.mail.host=smtp.qq.com
+spring.mail.port=465
+spring.mail.username=296006803@qq.com
+spring.mail.password=ymdizeaejyupbiec
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.ssl.enable=true
+
+#community
+community.path.domain=http://localhost:8080
