--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,3 +42,8 @@ spring.mail.properties.mail.smtp.ssl.enable=true
 #community
 community.path.domain=http://localhost:8080
 community.path.upload=D:/IDEA_project/community/upload
+
+#RedisProperties
+spring.redis.database=11
+spring.redis.host=localhost
+spring.redis.port=6379
